package edu.fiuba.algo3.modelo.Jugador;

import edu.fiuba.algo3.modelo.Construccion.ConstruccionProtoss;

import java.util.List;

public class Protoss extends Raza {

    private List<ConstruccionProtoss> construcciones;

    @Override
    public void agregarConstruccion() {

    }

    @Override
    public void recolectar() {

    }

    @Override
    public void evolucionar() {

    }
}
