package edu.fiuba.algo3.modelo.Protoss;

import edu.fiuba.algo3.modelo.Turno.Turno;
import edu.fiuba.algo3.modelo.Zerg.IConstruccionZerg;

public class Guarida implements IConstruccionZerg {
    @Override
    public boolean estaDisponible() {
        return false;
    }

    @Override
    public void conTurno(Turno turno) {

    }
}
