package edu.fiuba.algo3.modelo.Recursos;

public class Recursos {
}
