package edu.fiuba.algo3.modelo.Zerg;

import edu.fiuba.algo3.modelo.Protoss.IConstruccionProtoss;
import edu.fiuba.algo3.modelo.Turno.Turno;

public class Acceso implements IConstruccionProtoss {
    @Override
    public void conTurno(Turno turno) {

    }

    @Override
    public boolean estaDisponible() {
        return false;
    }
}
