package edu.fiuba.algo3.modelo.Zerg;

public class Larva {
    public Larva(int cantidadInicial) {
    }
}
