package edu.fiuba.algo3.modelo.Zerg;

public class Zangano {
    public Zangano(int cantidad) {
    }
}
