@startuml
'https://plantuml.com/class-diagram

class Mapa {}
class Nodo {}
abstract class Recursos {}
class Mineral {}
class GasVespeno {}

Nodo -> Mapa
Recursos -> Nodo
Mineral <- Recursos
Recursos -up-> GasVespeno

class Zerg {}
class Larva {}
class Zangano {}
abstract class ConstruccionZerg {}
class Moho {}
class Criadero {}
class Extractor {}
class ReservaReproduccion {}
class Guarida {}
class Espiral {}

Zerg --> Larva
Zerg --> Zangano
ConstruccionZerg ---> Criadero
ConstruccionZerg ---> Extractor
ConstruccionZerg ---> ReservaReproduccion
ConstruccionZerg ---> Guarida
ConstruccionZerg ---> Espiral

class Protoss {}
abstract class ConstruccionProtoss {}
class NexoMineral {}
class Pilon {}
class Asimilador {}
class Acceso {}
class PuertoEstelar {}
class Vida {}
class Escudo {}
abstract class Raza {}
abstract class Construccion {}

Raza <|-- Zerg
Raza <|-- Protoss

ConstruccionProtoss ---> NexoMineral
ConstruccionProtoss ---> Pilon
ConstruccionProtoss ---> Asimilador
ConstruccionProtoss ---> Acceso
ConstruccionProtoss ---> PuertoEstelar
Raza -up-> Recursos

Construccion <|-- ConstruccionProtoss
Construccion <|-- ConstruccionZerg

ConstruccionProtoss -> Escudo
Construccion <- Vida

Raza -right-> Construccion

ConstruccionZerg *-left> Moho

@enduml